netlify.toml updated

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,8 @@
   to = "https://prarambh.netlify.app/.netlify/functions/api/socket.io/:splat"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
