--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.18.0",
+    "mongoose": "8.1.1",
     "multer": "^2.0.2",
     "serverless-http": "^3.2.0",
     "socket.io": "^4.7.5"
